style.css
/* ... */
@media (min-width: 1200px) {
    .guest-name-overlay {
        font-size: 40px;

        padding-left: 500px;
    }
}


@media (max-width: 480px) {
    .guest-name-overlay {
        font-size: 3.5vw;
        top: 76%;
        padding-left: 44%;
    }
}


.map-toggles {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    margin-bottom: 1rem;
    margin-top: 1rem;
}

.map-toggle-btn {
    background: transparent;
    border: none;
    font-family: 'Be Vietnam Pro', sans-serif;
    font-size: 1.1rem;
    color: #888;
    cursor: pointer;
    transition: all 0.3s ease;
    padding: 5px 10px;
    position: relative;
}

.toggle-separator {
    font-size: 1.2rem;
    color: #ccc;
    font-weight: 300;
}


.map-toggle-btn:hover {
    color: #5a67d8;
}

/* Trạng thái đang chọn (Active) */
.map-toggle-btn.active {
    color: #5a67d8;
    font-weight: 700;
}



.map-container img.map-content {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: contain;
    background-color: #eef2f5;
}

/* Class để ẩn bản đồ */
.map-hidden {
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
    z-index: -1;
}


.map-content {
    transition: opacity 0.4s ease;
}

#preloader {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #f7f0eb;
    z-index: 99999;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transition: opacity 0.8s ease, visibility 0.8s ease;
}

/* Class để ẩn preloader */
#preloader.fade-out {
    opacity: 0;
    visibility: hidden;
}

/* Vòng quay loading */
.spinner {
    width: 50px;
    height: 50px;
    border: 5px solid #ddd;
    border-top: 5px solid #c71610;
    /* Màu đỏ chủ đạo */
    border-radius: 50%;
    animation: spin 1s linear infinite;
    margin-bottom: 15px;
}

.loading-text {
    font-family: 'Be Vietnam Pro', sans-serif;
    color: #555;
    font-size: 1rem;
    letter-spacing: 1px;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

